--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "landale-2",
-  "version": "0.1.0",
+  "name": "landale",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource/inter": "^5.0.8",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -20,6 +19,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icomoon": "^2.5.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
